--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "daisyui": "^5.0.43",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.511.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
